Backstage/kubernetes/backstage-deployment.yaml
# kubernetes/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: cxtsiacr.azurecr.io/backstage:0.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
      imagePullSecrets:
        - name: regcred
