Backstage/kubernetes/externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: default
spec:
  type: ExternalName
  externalName: backstage.backstage.svc.cluster.local
  ports:
  - port: 80
