Backstage/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($scheme = https) {
      add_header  Strict-Transport-Security "max-age=0;";
      }
spec:
  tls:
    - secretName: backstage-tls
      hosts:
        - cxtsidevopstoolsakssrv.germanywestcentral.cloudapp.azure.com
  rules:
    - host: cxtsidevopstoolsakssrv.germanywestcentral.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 80
